1. Edit GetAllCriterionByCategoryId API in CriterionController. 2. Edit CreateCycle API in CycleController. 3. Add ImportFromOldCycle API in CycleController. 4. Edit UpdateCycle API in CycleController. 5. Edit GetExplanatoryGuideDetailsByCategoryId API in ExplanatoryGuideController. 6. Edit GetAllGeneralFAQCategory API in GeneralFAQCategoryController. 7. Edit CreateAttachment API in ConditionAttachmentController.

--- a/.gitignore
+++ b/.gitignore
@@ -325,3 +325,54 @@ paket-files/
 /SharijhaAward.Persistence/obj/Debug/net8.0/SharijhaAward.Persistence.sourcelink.json
 /SharijhaAward.Persistence/obj/Debug/net8.0/ref/SharijhaAward.Persistence.dll
 /SharijhaAward.Api/wwwroot
+/SharijhaAward.Api/wwwroot/UploadedFiles/Circulars/1bfa1ad7-4dc8-4f1a-ab3c-db474792d071.png
+/SharijhaAward.Api/wwwroot/UploadedFiles/Circulars/2192d7f2-f15c-4f26-b81e-24087d697fc7.png
+/SharijhaAward.Api/wwwroot/UploadedFiles/Circulars/29f1f3e5-5f56-41c5-8a07-8b198e86803c.png
+/SharijhaAward.Api/wwwroot/UploadedFiles/Circulars/4fe77dca-8c51-44b8-b2ce-069fb4ab1159.jpg
+/SharijhaAward.Api/wwwroot/UploadedFiles/Circulars/723eecf4-ea7d-4901-8449-5ecd1fcdcce4.png
+/SharijhaAward.Api/wwwroot/UploadedFiles/Circulars/9d144b2c-f4d8-406b-86e2-745cdb13dc01.png
+/SharijhaAward.Api/wwwroot/UploadedFiles/Circulars/a203315c-c230-4af4-abe6-9f54d7998ee8.pdf
+/SharijhaAward.Api/wwwroot/UploadedFiles/Circulars/aa1a4f71-62d5-4b64-82b3-40a812faeb23.pdf
+/SharijhaAward.Api/wwwroot/UploadedFiles/Circulars/dc351923-bd24-42fe-8219-5fa62fcd65db.pdf
+/SharijhaAward.Api/wwwroot/UploadedFiles/Circulars/ecbf04f1-1ea7-4c5b-b038-036ecacd6772.pdf
+/SharijhaAward.Api/wwwroot/UploadedFiles/Circulars/f5502202-25e9-4c43-a139-8bd2fef8a593.pdf
+/SharijhaAward.Api/wwwroot/UploadedFiles/ExcelFiles/0837a519-90f0-421f-9ca7-3ebd14af1b8b.xlsx
+/SharijhaAward.Api/wwwroot/UploadedFiles/ExcelFiles/1edbc049-5841-4ad3-9990-fb3fce438efe.xlsx
+/SharijhaAward.Api/wwwroot/UploadedFiles/ExcelFiles/300cb350-59b6-4f21-addc-65c1aafb53ce.xlsx
+/SharijhaAward.Api/wwwroot/UploadedFiles/ExcelFiles/56bc4c15-304e-4fde-be73-9235b4b85e87.xlsx
+/SharijhaAward.Api/wwwroot/UploadedFiles/ExcelFiles/60173b62-d791-4e96-9032-44ec1b64a6e0.xlsx
+/SharijhaAward.Api/wwwroot/UploadedFiles/ExcelFiles/6a0eb215-944f-45c5-be76-d9af5121cc48.xlsx
+/SharijhaAward.Api/wwwroot/UploadedFiles/ExcelFiles/76543892-ba33-4483-92e8-691bef666d78.xlsx
+/SharijhaAward.Api/wwwroot/UploadedFiles/ExcelFiles/775b9371-6537-4bf4-b7b5-cc9f36aad287.xlsx
+/SharijhaAward.Api/wwwroot/UploadedFiles/ExcelFiles/7d468fa5-8ccf-46db-9f28-dd8a6efe2092.xlsx
+/SharijhaAward.Api/wwwroot/UploadedFiles/ExcelFiles/8131172c-5a32-454f-ad47-9c43ede0db14.xlsx
+/SharijhaAward.Api/wwwroot/UploadedFiles/ExcelFiles/a76bc479-84f2-4884-9dd3-ab281b31e99f.xlsx
+/SharijhaAward.Api/wwwroot/UploadedFiles/ExcelFiles/c3f41eaa-a765-43a5-b583-08bb06d3a2a6.xlsx
+/SharijhaAward.Api/wwwroot/UploadedFiles/ExcelFiles/c66d31de-d4cd-4b05-a1f7-906d2adf2c27.xlsx
+/SharijhaAward.Api/wwwroot/UploadedFiles/ExcelFiles/e31a5e18-ca98-49b7-b07e-dc998ee7d9fa.xlsx
+/SharijhaAward.Api/wwwroot/UploadedFiles/ExcelFiles/fb88f929-7cd0-4fba-b520-c73ba7500ee7.xlsx
+/SharijhaAward.Api/wwwroot/UploadedFiles/ExcelFiles/fcdb5cee-d86f-4a68-a70b-76eb3919131d.xlsx
+/SharijhaAward.Api/wwwroot/UploadedFiles/ExplanatoryGuide/052b37e8-2819-4cf3-8791-b6ab1775b08c.pdf
+/SharijhaAward.Api/wwwroot/UploadedFiles/ExplanatoryGuide/2f55b2b0-afc2-43cb-821e-e0949fefce4e.pdf
+/SharijhaAward.Api/wwwroot/UploadedFiles/Icons/479a0683-6c6c-42b3-a4b6-2652afe41bbb.png
+/SharijhaAward.Api/wwwroot/UploadedFiles/Icons/7d46f927-a653-4526-80d8-db02ff84cf6b.jpg
+/SharijhaAward.Api/wwwroot/UploadedFiles/Icons/91f412d1-0c53-4518-8e1a-01ee3817d639.jpg
+/SharijhaAward.Api/wwwroot/UploadedFiles/Icons/a74acd6c-2869-44a2-ae7b-1f64ad259e60.jpg
+/SharijhaAward.Api/wwwroot/UploadedFiles/Icons/ae81ceba-fce0-487e-8061-58107f960dda.png
+/SharijhaAward.Api/wwwroot/UploadedFiles/Icons/c521d571-dcc4-424d-8e93-f8f2b288b512.png
+/SharijhaAward.Api/wwwroot/UploadedFiles/Icons/c8e1e792-f665-4725-97bc-4832e8cf1715.jpg
+/SharijhaAward.Api/wwwroot/UploadedFiles/Icons/d3ccde79-cb20-4e8d-b2cc-3e4dbc690779.png
+/SharijhaAward.Api/wwwroot/UploadedFiles/Icons/e17bca42-cbe8-43eb-8f1f-817a24b5f11f.png
+/SharijhaAward.Api/wwwroot/UploadedFiles/Icons/f5a1cdf9-7cea-4eb3-953f-461d05602b50.jpg
+/SharijhaAward.Api/wwwroot/UploadedFiles/Images/0cac6523-285e-45f3-b3ff-f28b5d34d6ae.png
+/SharijhaAward.Api/wwwroot/UploadedFiles/Images/39f25b9b-c9f7-4704-b0bb-57ed353bf543.png
+/SharijhaAward.Api/wwwroot/UploadedFiles/Images/4c1b1ed7-a9b8-43ad-b788-786ca99d1761.jpg
+/SharijhaAward.Api/wwwroot/UploadedFiles/Images/63075708-f41c-4eb7-99c1-0ae02be8f7d0.png
+/SharijhaAward.Api/wwwroot/UploadedFiles/Images/836c6009-be32-495b-be7b-237358f9da0d.jpg
+/SharijhaAward.Api/wwwroot/UploadedFiles/Images/91263492-5d0f-4999-bc2a-6bf08f7a772a.png
+/SharijhaAward.Api/wwwroot/UploadedFiles/Images/993adcb8-00b0-4eb6-914f-63a6afc5d736.png
+/SharijhaAward.Api/wwwroot/UploadedFiles/Images/9c6922cb-6964-4fa7-b07c-ad21d80295fd.png
+/SharijhaAward.Api/wwwroot/UploadedFiles/Images/f369a47c-8241-4ae0-96c8-fe4bfe4431cc.png
+/SharijhaAward.Api/wwwroot/UploadedFiles/Videos/06bafd2c-8411-4672-a227-ef121f153b0b.mp4
+/SharijhaAward.Api/wwwroot/UploadedFiles/Videos/6db00390-6192-4c75-b223-899b1a380adb.mp4
+/SharijhaAward.Api/wwwroot/UploadedFiles/Videos/bed8f547-3b5e-452c-ad72-a9fba797a5ab.mp4
