--- a/SharijhaAward.Api/SharijhaAward.Api.csproj
+++ b/SharijhaAward.Api/SharijhaAward.Api.csproj
@@ -57,6 +57,7 @@
 		<Folder Include="wwwroot\InterviewAttachments\" />
 		<Folder Include="wwwroot\Logs\" />
 		<Folder Include="wwwroot\AdvancedFormsFiles\" />
+		<Folder Include="wwwroot\DynamicFiles\" />
 		<Folder Include="wwwroot\ProfilePics\" />
 		<Folder Include="wwwroot\GeneratedBarcode\" />
 		<Folder Include="wwwroot\Images\" />
