1. Edit GetAboutPage API in AboutPageController. 2. Edit GetAboutPageWebSite API in AboutPageController. 3. Edit AcceptOnAchievement API in AchievementsController. 4. Edit GetAchievementsById API in AchievementsController. 5. Edit GetAchievementsPage API in AchievementsController. 6. Edit GetPropertyNames API in ReportsController. 7. Edit GetAllEvents API in EventController. 8. Edit SendRelatingRequest API in RelatedAccountController. 9. Edit GetAllReceivedRequests API in RelatedAccountController. 10. Edit GetAllRelatedAccounts API in RelatedAccountController. 11. Edit GetallSendedRequests API in RelatedAccountController. 12. Add CreateDigitalSignature API in DigitalSignaturesController. 13. Add DeleteDigitalSignature API in DigitalSignaturesController. 14. Add UpdateDigitalSignature API in DigitalSignaturesController. 15. Add GetAllDigitalSignaturesForUser API in DigitalSignaturesController. 16. Add ActivateTemplate API in TemplatesController. 17. Add CreateTemplate API in TemplatesController. 18. Add DeleteTemplate API in TemplatesController. 19. Add UpdateTemplate API in TemplatesController. 20. Add GetAllTemplates API in TemplatesController. 21. Add GetTemplateById API in TemplatesController. 22. Edit Database (Add New Tables (DigitalSignatures, Templates)).

--- a/SharijhaAward.Api/SharijhaAward.Api.csproj
+++ b/SharijhaAward.Api/SharijhaAward.Api.csproj
@@ -58,6 +58,7 @@
 		<Folder Include="wwwroot\Logs\" />
 		<Folder Include="wwwroot\AdvancedFormsFiles\" />
 		<Folder Include="wwwroot\DynamicFiles\" />
+		<Folder Include="wwwroot\DigitalSignatures\" />
 		<Folder Include="wwwroot\ProfilePics\" />
 		<Folder Include="wwwroot\GeneratedBarcode\" />
 		<Folder Include="wwwroot\Images\" />
